//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.echo.text;

message Mutation {
  bytes update = 1;
  int32 clientId = 2;
}

message Snapshot {
  bytes data = 1;
}
